tests/content-scanning/frontmatter/snapshot.txt
*-----------------------------------------------*
|    WARNING: THIS IS A DEBUG BUILD OF ZINE     |
|-----------------------------------------------|
| Debug builds enable expensive sanity checks   |
| that reduce performance.                      |
|                                               |
| To create a release build, run:               |
|                                               |
|       zig build -Doptimize=ReleaseFast        |
|                                               |
| If you're investigating a bug in Zine, then a |
| debug build might turn confusing behavior     |
| into a crash.                                 |
|                                               |
| To disable all forms of concurrency, you can  |
| add the following flag to your build command: |
|                                               |
|              -Dsingle-threaded                |
|                                               |
*-----------------------------------------------*

content/wrong-syntax.smd:16:15 missing token: ',' after field value
|   .output = "good/url/though.html"
|             ^^^^^^^^^^^^^^^^^^^^^^


content/index.smd:4:11: error: missing layout file
|   .layout = "",
|             ^^

content/validation-errors.smd:4:11: error: missing layout file
|   .layout = "",
|             ^^

content/validation-errors.smd:8:4: error: invalid value in 'aliases'
|   "bad path 💩",
|   ^^^^^^^^^^^^^^^^

content/validation-errors.smd:15:13: error: invalid name in alternatives
|   .name = "",
|           ^^

content/validation-errors.smd:20:15: error: invalid path in alternatives
|   .output = "",
|             ^^

----------------------------
       -- VARIANT --
----------------------------
.id = 0,
.content_dir_path = content

  ------- SECTION -------
.index = 1,
.section_path = content/,
.active = true,
.forbid_subsections false,
.pages = [
    content/validation-errors.smd
    content/wrong-syntax.smd
],



 ----- EXIT CODE: 1 -----
